--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div>
                  <img src="images\dad2020.png"
-                 alt="proud peacock" style="height:428px; width:598px;"><br>
+                 alt="God bless the ministry of Sri Isaac Dayardhana Rao" style="height:428px; width:598px;"><br>
                  </div><br>
            </div6>
 
