--- a/index.html
+++ b/index.html
@@ -8,28 +8,77 @@
 	<div1>
                  		<img src="images\dad2020.png"
                 		 alt="Hen and her chick" style="height:128px; width:100px;"></div1>
-                             <h1 style="height:78px; width:600px;font-size:64;margin-left:300px;"> HEADING  </h1>
+                             
+ <div2 style="height:528px; width:800px;"> TESTIMONIAL FOR SRI GURINDAPALLI
+                                  </div2><br>
+                 <div12 style="height:528px; width:800px;margin-left:210px;">
+                               ISAAC DAYARDHANA RAO GARU<hr> </div12>
                   <br> 
 
-		
 <title> HANNAH'S io form1 </title>
       
 
 </head>
 <body>
 <h3>Testimonial is a formal statement testifying to someone's character and qualifications.</h3>
-<p1>    Please enter the subject, if you would like to write a testimonial about Sri Gurindapalli Isaac Dayardhana
+<p1 style="background-color:rgb(65,255,118);color:rgb(16,38,37);fontsize:16px;">    Please click on the subject, on which, you would like to read a testimonial about Sri Gurindapalli Isaac Dayardhana
    Rao garu. </p1>
-<br><br><br>
+<br><br>
+<ul>
+		    <li><a href="#ssm">sunday school minisrtry </a></li>
+		    <li><a href="#vo"> village outreach </a></li>
+		   <li><a href="#swe"> secular work ethic </a></li>
+		   <li><a href="#mm"> music ministry </a></li>
+		   <li><a href="#cc"> community christmas </a></li>
+                                     <li><a href="#bstudy"> Bible study</a></li>
+                                     <li><a href="#llm"> Lutheran church property support </a></li>
+		</ul>
 	
 	<br>
            <div6>
 
 		<div>
                  <img src="images\dad2020.png"
-                 alt="God bless the ministry of Sri Isaac Dayardhana Rao" style="height:428px; width:598px;"><br>
+                 alt="proud peacock" style="height:428px; width:598px;"><br>
                  </div><br>
            </div6>
+
+<article>
+                 <section>
+                 <a name=""></a>
+	</section>
+
+<section>
+                 <a name="ssm"></a>
+<p2> Sunday school ministry </p2>
+	</section><br>
+<section>
+                 <a name="vo"></a>
+<p3>vo</p3>
+	</section><br>
+<section>
+                 <a name="swe"></a>
+<p4> swe </p4>
+	</section><br>
+<section>
+                 <a name="mm"></a>
+<p5> mm  </p5>
+	</section><br>
+<section>
+                 <a name="cc"></a>
+<p6> cc </p6>
+	</section><br>
+<section>
+                 <a name="bstudy"></a>
+<p7> bstudy </p7>
+	</section><br>
+<section>
+                 <a name="llm"></a>
+<p8> llm </p8>
+	</section><br>
+
+
+
 
 </body>
 
