--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                  		<img src="images\dad2020.png"
                 		 alt="Hen and her chick" style="height:128px; width:100px;"></div1>
                              
- <div2 style="height:528px; width:800px;"> TESTIMONIAL FOR SRI GURINDAPALLI
+ <div2 style="height:528px; width:800px;color:rgb(166,37,28);"> TESTIMONIAL FOR SRI GURINDAPALLI
                                   </div2><br>
                  <div12 style="height:528px; width:800px;margin-left:210px;">
                                ISAAC DAYARDHANA RAO GARU<hr> </div12>
@@ -25,6 +25,7 @@
    Rao garu. </p1>
 <br><br>
 <ul>
+                                     <li><a href="#blh">brief life history </a></li>
 		    <li><a href="#ssm">sunday school minisrtry </a></li>
 		    <li><a href="#vo"> village outreach </a></li>
 		   <li><a href="#swe"> secular work ethic </a></li>
@@ -42,15 +43,34 @@
                  alt="proud peacock" style="height:428px; width:598px;"><br>
                  </div><br>
            </div6>
-
+<hr>
 <article>
                  <section>
-                 <a name=""></a>
-	</section>
+                 <a name="blh"></a>
 
+<p1 style="text-align : center;
+       background-color:rgb(252,160,20);color:rgb(16,62,79);"> <strong> Brief life history of Sri Isaac Dayardhana Rao garu</strong><br>
+Sri Gurindapalli Isaac Dayardhana Rao garu was born in Nagaram, Repalle district on December 11,<br>
+1945, to Mr. Gurindapalli David garu and Mrs.Gurindapalli Devamani garu.Both of his parents were teachers
+<br> Lutheran high school. They raised Mr.G.I.Dayardhana Rao in the Christian faith and trained him to love
+<br> Lord Jesus, early on.They instilled a strong sense of compassion for the needy in him.
+
+
+
+</p1>
+	</section>
+<hr>
 <section>
                  <a name="ssm"></a>
-<p2> Sunday school ministry </p2>
+<p2 style="text-align : center;
+       background-color:rgb(43,240,213);color:rgb(166,37,28);"><strong> Sunday school ministry of Sri G Isaac Dayardhana Rao garu</strong><br>
+Sri.Gurindapalli Isaac Dayardhana Rao garu started teaching Sunday school when he was in his thirties and continued until the last day of his life.<br>
+He loved the little ones very much and would be humble enough to use various teaching aids, like action songs, play acting and mime, in order to<br>
+catch and keep the attention of the little kids.The little ones in turn thoroughly enjoyed his story-telling skills, voice modulation,songs and actions <br>
+that aptly described the scenario to the kids. Often, his students could be heard, laughing and taking part in the play-acting part of the narration,<br>
+because, Mr.G.I.Dayardhana Rao garu had the talent to make even the most shy and bashful little kid to loosen up and actively take part in the <br>
+class.
+ </p2>
 	</section><br>
 <section>
                  <a name="vo"></a>
@@ -58,11 +78,19 @@
 	</section><br>
 <section>
                  <a name="swe"></a>
-<p4> swe </p4>
-	</section><br>
+<div4  > <p4 class="swe">
+<strong> Secular Work Ethic of Sri G Isaac Dayardhana Rao garu</strong><br>
+Sri Gurindapalli Isaac Dayardhana Rao garu worked as an engineer for the Central Telecommunications
+<br>department of India.He was a skilled, honest engineer and never took a bribe.He took vouluntary <br>
+ retirement in 1999 and dedicated the rest of his life to serve the Lord Jesus.</p4> </div4>
+	</section><br><hr>
 <section>
                  <a name="mm"></a>
-<p5> mm  </p5>
+<p5 style="background-color:rgb(166,76,219);color:rgb(27,12,36)" > 
+<strong> Music ministry of Sri G Isaac Dayardhana Rao garu </strong><br>
+     Sri Gurindapalli Isaac Dayardhana Rao garu had a keen interest and good
+talent in composing , playing and teaching music.
+  </p5>
 	</section><br>
 <section>
                  <a name="cc"></a>
