--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 
 	<div1>
-                 		<img src="images\dad2020.png"
+                 		<img src="images\dad2020.PNG"
                 		 alt="Hen and her chick" style="height:128px; width:100px;"></div1>
                              
  <div2 style="height:528px; width:800px;color:rgb(166,37,28);"> TESTIMONIAL FOR SRI GURINDAPALLI
                                   </div2><br>
                  <div12 style="height:528px; width:800px;margin-left:210px;">
-                               ISAAC DAYARDHANA RAO GARU<hr> </div12>
+                               ISAAC DAYARDHAN RAO GARU<hr> </div12>
                   <br> 
 
 <title> HANNAH'S io form1 </title>
