--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 	<div1>
                  		<img src="images\dad2020.PNG"
-                		 alt="Hen and her chick" style="height:128px; width:100px;"></div1>
+                		 alt="SriGIDayardhan" style="height:128px; width:100px;"></div1>
                              
- <div2 style="height:528px; width:800px;color:rgb(166,37,28);"> TESTIMONIAL FOR SRI GURINDAPALLI
+ <div2 style="height:528px; width:800px;color:rgb(166,37,28);"> TESTIMONIAL FOR MR GURINDAPALLI
                                   </div2><br>
                  <div12 style="height:528px; width:800px;margin-left:210px;">
-                               ISAAC DAYARDHAN RAO GARU<hr> </div12>
+                               ISAAC DAYARDHANA RAO GARU<hr> </div12>
                   <br> 
 
 <title> HANNAH'S io form1 </title>
@@ -40,7 +40,7 @@
 
 		<div>
                  <img src="images\dad2020.png"
-                 alt="proud peacock" style="height:428px; width:598px;"><br>
+                 alt="God bless the ministry of SriGIDayardhana Rao garu" style="height:428px; width:598px;"><br>
                  </div><br>
            </div6>
 <hr>
