edit daddy dares

--- a/index.html
+++ b/index.html
@@ -21,25 +21,29 @@
 </head>
 <body>
 <h3>Testimonial is a formal statement testifying to someone's character and qualifications.</h3>
-<p1 style="background-color:rgb(65,255,118);color:rgb(16,38,37);fontsize:16px;">    Please click on the subject, on which, you would like to read a testimonial about Sri Gurindapalli Isaac Dayardhana
-   Rao garu. </p1>
+<p1 style="background-color:rgb(65,255,118);color:rgb(16,38,37);fontsize:16px;">  
+  Please click on the subject, on which, you would like to read a testimonial about Sri Gurindapalli 
+Isaac Dayardhana    Rao garu. Daddy dares is a collection of from the book "How about that?".
+It takes a parent back to the times, when the parent dared to answer the child's question honestly.
+</p1>
 <br><br>
 <ul>
-                                     <li><a href="#blh">brief life history </a></li>
-		    <li><a href="#ssm">sunday school minisrtry </a></li>
-		    <li><a href="#vo"> village outreach </a></li>
-		   <li><a href="#swe"> secular work ethic </a></li>
-		   <li><a href="#mm"> music ministry </a></li>
-		   <li><a href="#cc"> community christmas </a></li>
-                                     <li><a href="#bstudy"> Bible study</a></li>
-                                     <li><a href="#llm"> Lutheran church property support </a></li>
+		<li><a style="color:red;font-size:32px;background-color:rgb(227,212,73);" href="#dd">DADDY DARES  !! </a></li>
+                                     <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#blh">brief life history </a></li>
+		    <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#ssm">sunday school minisrtry </a></li>
+		    <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#vo"> village outreach </a></li>
+		   <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#swe"> secular work ethic </a></li>
+		   <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#mm"> music ministry </a></li>
+		   <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#cc"> community christmas </a></li>
+                                     <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#bstudy"> Bible study</a></li>
+                                     <li><a style="color:red;font-size:22px;background-color:rgb(227,212,73);" href="#llm"> Lutheran church property support </a></li>
 		</ul>
 	
 	<br>
            <div6>
 
 		<div>
-                 <img src="images\dad2020.png"
+                 <img src="images\dad2020.PNG"
                  alt="proud peacock" style="height:428px; width:598px;"><br>
                  </div><br>
            </div6>
@@ -48,6 +52,23 @@
                  <section>
                  <a name="blh"></a>
 
+<hr>
+<p1 style="text-align : center;
+       background-color:rgb(255,69,112);color:rgb(66,18,29);"> <strong> DADDY DARES  !!! </strong><br>
+Sri Gurindapalli Isaac Dayardhana Rao garu was a dad who actually listened to the zillion and one questions,<br>
+asked by his kids.He had studied the Bachelor of Thelology and gained more aptitude, skill & knowledge<br>
+to answer kids ' questions like .....
+
+Q1) Why are little babies baptised ?
+A1) Baptism means getting adopted into the family of God, to become a child of God. In 2015, the government<br>
+of China had cancelled the law called - "ONE CHILD POLICY". This policy gave mandatory duty to doctors to kill<br>
+the baby if she is a second baby of her parents.But if an American adopts that baby, then the baby would be saved<br>
+death. The baby does not have to understand that the American is her adoptive parent now.And the baby need not<br>
+feel comfortable or joyful,when her adoptive parent takes her into the safety of America, where death cannot harm her.
+
+
+</p1>
+<hr>
 <p1 style="text-align : center;
        background-color:rgb(252,160,20);color:rgb(16,62,79);"> <strong> Brief life history of Sri Isaac Dayardhana Rao garu</strong><br>
 Sri Gurindapalli Isaac Dayardhana Rao garu was born in Nagaram, Repalle district on December 11,<br>
