--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ asked by his kids.He had studied the Bachelor of Thelology and gained more aptit
 to answer kids ' questions like .....
 
 Q1) Why are little babies baptised ?
-A1) Baptism means getting adopted into the family of God, to become a child of God. In 2015, the government<br>
+A1) Baptism means getting adopted into the family of God, to become a child of God. <br>In 2015, the government<br>
 of China had cancelled the law called - "ONE CHILD POLICY". This policy gave mandatory duty to doctors to kill<br>
 the baby if she is a second baby of her parents.But if an American adopts that baby, then the baby would be saved<br>
 death. The baby does not have to understand that the American is her adoptive parent now.And the baby need not<br>
